--- a/hw-advanced/view/contact.phtml
+++ b/hw-advanced/view/contact.phtml
@@ -144,19 +144,19 @@
 <body>
 <div id="content">
     <ul id="header-nav">
-        <li><a href="/admin">Admin</a></li>
+        <li><a href="./admin">Admin</a></li>
         <li>:</li>
         <li><a href="http://www.popphp.org/" target="_blank">Pop PHP Website</a></li>
         <li>:</li>
         <li><a href="https://github.com/nicksagona/PopPHP" target="_blank">Pop PHP GitHub</a></li>
     </ul>
     <ul id="main-nav">
-        <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a class="nav-on" href="/contact">Contact</a></li>
+        <li><a href="./">Home</a></li>
+        <li><a href="./about">About</a></li>
+        <li><a class="nav-on" href="./contact">Contact</a></li>
     </ul>
     <div id="header">
-        <a class="home" href="/"><span style="display: none;">Home</span></a>
+        <a class="home" href="./"><span style="display: none;">Home</span></a>
         <h1>Hello World!</h1>
         <h2>Pop PHP Framework Example Application</h2>
     </div>
