--- a/hw-advanced/view/admin/users/edit.phtml
+++ b/hw-advanced/view/admin/users/edit.phtml
@@ -161,13 +161,15 @@
 <body>
 <div id="content">
     <ul id="header-nav">
+        <li><a href="<?php echo defined('BASE_URI') ? BASE_URI : null; ?>/">Main Website</a></li>
+        <li>:</li>
         <li><a href="http://www.popphp.org/" target="_blank">Pop PHP Website</a></li>
         <li>:</li>
         <li><a href="https://github.com/nicksagona/PopPHP" target="_blank">Pop PHP GitHub</a></li>
     </ul>
     <ul id="main-nav">
-        <li><a href="/admin">Admin Home</a></li>
-        <li><a class="nav-on" href="/admin/users">Users</a></li>
+        <li><a href="<?php echo defined('BASE_URI') ? BASE_URI : null; ?>/admin">Admin Home</a></li>
+        <li><a class="nav-on" href="<?php echo defined('BASE_URI') ? BASE_URI : null; ?>/admin/users">Users</a></li>
     </ul>
     <div id="header">
         <h1>Hello World : Admin Area</h1>
@@ -176,11 +178,11 @@
     <div id="content-area">
         <h3>This is the Admin Users Page</h3>
         <ul id="sub-nav">
-            <li><a href="/admin/users/add">Add</a></li>
+            <li><a href="<?php echo defined('BASE_URI') ? BASE_URI : null; ?>/admin/users/add">Add</a></li>
             <li>:</li>
-            <li><a href="/admin/users/edit">Edit</a></li>
+            <li><a href="<?php echo defined('BASE_URI') ? BASE_URI : null; ?>/admin/users/edit">Edit</a></li>
             <li>:</li>
-            <li><a href="/admin/users/remove">Remove</a></li>
+            <li><a href="<?php echo defined('BASE_URI') ? BASE_URI : null; ?>/admin/users/remove">Remove</a></li>
         </ul>
         <h4>Edit a User</h4>
         <p>
