--- a/hw-simple/view/index.phtml
+++ b/hw-simple/view/index.phtml
@@ -149,12 +149,12 @@
         <li><a href="https://github.com/nicksagona/PopPHP" target="_blank">Pop PHP GitHub</a></li>
     </ul>
     <ul id="main-nav">
-        <li><a class="nav-on" href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/contact">Contact</a></li>
+        <li><a class="nav-on" href="./">Home</a></li>
+        <li><a href="./about">About</a></li>
+        <li><a href="./contact">Contact</a></li>
     </ul>
     <div id="header">
-        <a class="home" href="/"><span style="display: none;">Home</span></a>
+        <a class="home" href="./"><span style="display: none;">Home</span></a>
         <h1>Hello World!</h1>
         <h2>Pop PHP Framework Example Application</h2>
     </div>
